@@ -1,3 +1,8 @@
+2012-03-28  Richard Guenther  <rguenther@suse.de>
+
+	* typeck2.c (process_init_constructor_array): Use the proper
+	type for computing the array length.
+
 2012-03-27  Meador Inge  <meadori@codesourcery.com>
 
 	PR c++/52672
